restructured header components

--- a/src/components/Header/styles/Header.module.css
+++ b/src/components/Header/styles/Header.module.css
@@ -1,3 +1,4 @@
+/* importing images for my header component to use for the carousal slider*/
 .imageOne {
   background-image: url(../assests/backgrounds/churchAlter.jpg);
 }
