--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.background {
+  @apply bg-cover bg-center bg-blend-multiply bg-no-repeat;
+}
