--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@
 .background {
   @apply bg-cover bg-center bg-blend-multiply bg-no-repeat;
 }
+
+.input {
+  @apply block mt-1 rounded-sm outline-none w-[100%] m-auto shadow-lg p-5;
+}
